libreoffice/service.yml
apiVersion: v1
kind: Service
metadata:
  name: libreoffice
  labels:
    app: libreoffice
spec:
  ports:
  - name: http
    port: 9980
  selector:
    app: libreoffice
